Pushing new code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width= , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width , initial-scale=1.0">
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <!-- CSS Stylesheet -->
@@ -27,14 +27,13 @@
 
         <!-- Displaying the PDF -->
 
-        <canvas id="pad-render">
+        <canvas id="page-render">
         </canvas>
 
     </div>
 
 
 
-    <script src="https://www.jsdelivr.com/package/npm/pdfjs-dist"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.6.347/pdf.min.js"></script>
     <script src="js/main.js"></script>
 </body>
-</html>
